--- a/Freaky Furday/FreakyFurday/index.html
+++ b/Freaky Furday/FreakyFurday/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
 
-    <title>Freaky Furday</title>
+    <title>FreakyFurday</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -15,9 +15,17 @@
 
     <div class="outerContainer">
         <h3 class="written-in-ink"><a href="https://www.inklestudios.com/ink">WRITTEN IN INK</a></h3>
+
+        <div id="controls" class="buttons">
+          <a id="rewind" title="Restart story from beginning">restart</a>
+          <a id="save" title="Save progress">save</a>
+          <a id="reload" title="Reload from save point">load</a>
+          <a id="theme-switch" title="Switch theme">theme</a>
+        </div>
+
         <div id="story" class="container">
             <div class="header">
-                <h1>Freaky Furday</h1>
+                <h1>FreakyFurday</h1>
                 <h2 class="byline"></h2>
             </div>
         </div>
